update document file

--- a/document-output.html
+++ b/document-output.html
@@ -10,7 +10,8 @@
     <p id="demo"></p>
 
     <script>
-        document.getElementById("demo").innerHTML = "Check Element output";
+        document.write("Welcome Javascript");
+        document.getElementById("demo").innerHTML = "<em>Check Element output</em>";
     </script>
 </body>
 </html>
