updated index file

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <script>
         let h1 = document.createElement("h1");
-        h1.innerHTML = "<strong>Welcome to My JavaScript Course</strong>";
+        h1.innerHTML = "<strong>Welcome to My JavaScript</strong>";
         h1.style.textAlign = "center";
         document.body.appendChild(h1);
     </script>
