--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <script>
         let h1 = document.createElement("h1");
-        h1.innerHTML = "<strong>Developing Modern Full Stack Serverless SaaS Class No.1 Complete.</strong>";
+        h1.innerHTML = "<strong>Developing Modern Full Stack Serverless SaaS<br/> Class No.1 Complete. 31 May 2020</strong>";
         h1.style.textAlign = "center";
         document.body.appendChild(h1);
     </script>
